[gd_scene load_steps=20 format=2]

[ext_resource path="res://Escenas/Principal.gd" type="Script" id=1]
[ext_resource path="res://assets/UI Base Pack/PNG/grey_panel.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Kenney Pixel Square.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/Game Icons/PNG/Black/1x/door.png" type="Texture" id=4]
[ext_resource path="res://assets/Game Icons/PNG/Black/1x/exclamation.png" type="Texture" id=5]
[ext_resource path="res://assets/Game Icons/PNG/Black/1x/information.png" type="Texture" id=6]
[ext_resource path="res://assets/Game Icons/PNG/Black/1x/zoom.png" type="Texture" id=7]
[ext_resource path="res://assets/Game Icons/PNG/Black/1x/basket.png" type="Texture" id=8]
[ext_resource path="res://assets/music/AcousticMeditation2.mp3" type="AudioStream" id=9]
[ext_resource path="res://assets/Game Icons/PNG/Black/1x/musicOn.png" type="Texture" id=10]
[ext_resource path="res://assets/Game Icons/PNG/Black/1x/singleplayer.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 56
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0.215686 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.223529, 0.435294, 0.54902, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.196078, 0.576471, 0.52549, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.952941, 0.160784, 0.0784314, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.14902, 0.607843, 0.607843, 0.607843 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )
Button/styles/normal = SubResource( 7 )
Button/styles/pressed = SubResource( 8 )
Label/fonts/font = null
WindowDialog/styles/panel = SubResource( 6 )

[node name="Principal" type="Node"]
script = ExtResource( 1 )

[node name="Fondo" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo" type="Label" parent="Fondo"]
anchor_left = 0.138
anchor_top = 0.164
anchor_right = 0.831
anchor_bottom = 0.208
margin_left = -0.0400085
margin_top = 0.119995
margin_right = 0.519958
margin_bottom = -0.360016
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Aplicación de prueba"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Opciones" type="ItemList" parent="Fondo"]
anchor_left = 0.241
anchor_top = 0.419
anchor_right = 0.637
anchor_bottom = 0.585
margin_left = -0.279999
margin_top = -0.47998
margin_right = 162.04
margin_bottom = 308.8
custom_fonts/font = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
items = [ "Imágenes", ExtResource( 7 ), false, "TTS & STT", ExtResource( 5 ), false, "Compras", ExtResource( 8 ), false, "Info", ExtResource( 6 ), false, "Música", ExtResource( 10 ), false, "Salir", ExtResource( 4 ), false, "Perfil", ExtResource( 11 ), false ]
max_columns = 3
same_column_width = true
icon_mode = 0
fixed_icon_size = Vector2( 150, 150 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogoPopUp" type="AcceptDialog" parent="Fondo"]
anchor_left = 0.3
anchor_top = 0.224
anchor_right = 0.698
anchor_bottom = 0.381
margin_top = -0.0800171
margin_right = 0.159973
margin_bottom = -0.52002
theme = SubResource( 5 )
window_title = ""
dialog_text = "Esta es una aplicación para poner a prueba el acceso a funcionalidades de dispositivos Android a través de plugins de Godot Engine"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NombrePopup" type="AcceptDialog" parent="Fondo"]
anchor_left = 0.3
anchor_top = 0.224
anchor_right = 0.698
anchor_bottom = 0.381
margin_top = -0.0800171
margin_right = 0.159973
margin_bottom = -0.52002
theme = SubResource( 5 )
window_title = ""
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReproductorMusica" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[connection signal="item_selected" from="Fondo/Opciones" to="." method="_on_Opciones_item_selected"]
